# bds_python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: gradient_test.yml  parallel_test.yml  recursive_test.yml  stress_test.yml  unit_test.yml
docs/: api.md
examples/: rosenbrock_example.py
src/bds/: __init__.py  _directions.py  _exit.py  _gradient.py  _optimize.py  _options.py  _result.py  _utils.py
tests/: profile_optiprofiler.py  profile_optiprofiler_script.py  test_directions.py  test_gradient.py  test_optimize.py  test_parallel.py  test_profile_optiprofiler.py  test_recursive.py  test_stress.py
tests/competitors/: __init__.py  bds.py  evolved_bds_solver.py  evolved_bds_solver_lean.py  evolved_bds_strategy_investigation.md  lean_evolved_bds_acceleration_and_rotation.md  nomad_solver.py
